third commit_build user information page

--- a/assignment2/src/components/Navbar.css
+++ b/assignment2/src/components/Navbar.css
@@ -195,6 +195,11 @@
     background-color: gray;
 }
 
+.side-bar li{
+    margin: 0;
+    padding: 0;
+}
+
 /* Media queries for large and small screens */
 @media (min-width: 600px) {
     .navbar-large {
