--- a/assignment2/src/App.css
+++ b/assignment2/src/App.css
@@ -1,7 +1,11 @@
+/*
+Sanghyun Jun
+Sanghyun.Jun.1@stonybrook.edu
+*/
 #root {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  color: rgb(0, 0, 0); /* 텍스트 색상 지정 */
+  color: rgb(0, 0, 0);
 }
