--- a/assignment2/src/components/Navbar.css
+++ b/assignment2/src/components/Navbar.css
@@ -1,3 +1,7 @@
+/*
+Sanghyun Jun
+Sanghyun.Jun.1@stonybrook.edu
+*/
 /* Container padding settings */
 @media (min-width: 800px) {
     .container {
@@ -87,7 +91,7 @@
 }
 
 .navbar-large .center-icons li a {
-    width: 120px; 
+    width: 140px; 
 }
 
 .dropdown {
@@ -125,7 +129,7 @@
 
 /* SMALL Navbar */
 .navbar-small {
-    background-color: #000; /* 검은색 배경 */
+    background-color: #000;
     height: 70px;
     width: 100%;
     display: flex;
@@ -145,7 +149,7 @@
 
 .navbar-small a {
     text-decoration: none;
-    color: white; /* 흰색 글씨 */
+    color: white; 
 }
 
 .navbar-small li:first-child {
