--- a/assignment2/src/pages/FacilityReservation.css
+++ b/assignment2/src/pages/FacilityReservation.css
@@ -1,3 +1,7 @@
+/*
+Sanghyun Jun
+Sanghyun.Jun.1@stonybrook.edu
+*/
 .select{
     width: 100%;
     padding: 10px;
@@ -5,13 +9,14 @@
 }
 
 .text{
-    width: 100%;
+    /*make it fully viewable in small screeen*/
+    width: 97%;
     padding: 10px;
     margin-bottom: 15px;
 }
 
 .textarea{
-    width: 100%;
+    width: 97%;
     padding: 10px;
     margin-bottom: 15px;
 }
@@ -20,7 +25,6 @@
     margin-bottom: 15px;
 }
 
-
 .reservation-container{
     padding: 20px;
 }
@@ -28,25 +32,27 @@
 .selected-container{
     width: 100%;
     display: flex;
+    flex-direction: row;
+    align-items: flex-start;
     margin-bottom: 15px;
 }
 
 .selected-image{
-    width: 400px;
-    height: 250px;
-    margin-right: 20px;
+    flex: 1 1 auto;
+    max-width: 65%;
+    height: auto;
+    align-items: center;
+    margin-right: 5px;
     border-radius: 10px;
 }
 
-.selected-details{
-    min-width: 300px;
-}
 .selected-details h2 {
-    font-size: 25px;
+    font-size: clamp(15px, 2vw, 25px);
     margin: 0;
   }
   
 .selected-details p {
+    font-size: clamp(12px, 2vw, 18px);
     margin: 10px 0;
   }
 
@@ -58,3 +64,4 @@
     cursor: pointer;
     border-radius: 5px;
 }
+
