--- a/assignment2/src/pages/MyReservation.css
+++ b/assignment2/src/pages/MyReservation.css
@@ -1,14 +1,21 @@
+/*
+Sanghyun Jun
+Sanghyun.Jun.1@stonybrook.edu
+*/
 .list-container{
     background-color: white;
     display: flex;
+    flex-direction: row;
+    align-items: flex-start;
     padding: 20px; 
     margin: 20px 20px;
     border-radius: 15px;
 }
 
 .list-image{
-    width: 400px;
-    height: 250px;
+    flex: 1 1 auto;
+    max-width: 65%;
+    height: auto;
     margin-right: 20px;
     border-radius: 10px;
 }
@@ -18,11 +25,12 @@
 }
 
 .list-detail h2 {
-    font-size: 25px;
+    font-size: clamp(15px, 2vw, 25px);
     margin: 0;
   }
   
 .list-detail p {
+    font-size: clamp(12px, 2vw, 18px);
     margin: 10px 0;
   }
 
